Tue Nov 30 19:58:56 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* input-file.rb, output-file.rb, wc.rb: 余分な化石コードの削除

Tue Nov 30 19:26:21 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, c-basic-group-by.rb: デバックコード削除

Mon Nov 29 20:34:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: デバックコード挿入 その3(BUG#294対応)

Thu Nov 25 19:26:27 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: 下ので修正忘れ.
	*fairy.gemspec: -001以外はサブマイナーバージョンをつけるようにした.

Thu Nov 25 19:16:43 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf.tmpl, conf.rb: デフォルト値変更
	* controller.rb, master.rb, node.rb, p-filter.rb, processor.rb: ロ
	  グメッセージ修正
	* logger.rb: 例外がちゃんと通知できていなかった.
	* log.rb: デバッグレベルが低いときのLOG::**f等のnop指定が出来てい
	  なかった.

Wed Nov 17 22:22:33 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* c-input-file.rb: デバッグメッセージ削除

Wed Nov 17 20:28:59 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* *output-null.rb: REQ#292対応
	* output-file.rb: BUG#61対応
	* vfile.rb: vfileから読み込むとき, 行末の改行を削るの忘れていた.

Mon Nov 15 21:47:17 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, fairy.conf.tmpl, logger.rb, conf.rb: ログローテーションに
	  対応(REQ#154)
	* Makefile: ちょっと変更

Sat Nov 13 00:51:10 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-inject.rb: injectで可換でないときにも対応(REQ#132)

Tue Nov  2 18:37:01 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* README: Copyright追加(REQ#289対応)

Tue Nov  2 17:34:25 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* LICENSE: 追加(REQ#288)
	* README: fairy.gemspecのdescription修正に伴う修正
	* fairy.gemspec: description再修正
	* spec/fairy8_spec.rb: REQ#284に伴う修正

Tue Nov  2 15:14:06 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy, base-app.rb: BUG#286対応
	* tools/cap_recipe/Capfile: fairyをインストールするタスク追加対応
	  (REQ#287)
	* Makefile: bin/fairyタグ修正

Tue Nov  2 13:33:41 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.gemspec: description修正
	* Makefile: pushタグの依存関係修正

Mon Nov  1 22:15:30 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
