@@ -3,14 +3,12 @@
 # Copyright (C) 2007-2010 Rakuten, Inc.
 #
 
-require "fairy/client/filter"
+require "fairy/client/here"
 
 require "fairy/share/vfile"
 
 module Fairy
-  class OutputLocalFile < Filter
-
-    @backend_class = nil
+  class OutputLocalFile<Here
 
     def OutputLocalFile.output(fairy, opts, filename)
       ffile = new(fairy, opts)
@@ -20,8 +18,6 @@ module Fairy
 
     def initialize(fairy, opts=nil)
       super
-      @opts = opts
-      
       @filename = nil      
     end
 
@@ -35,20 +31,30 @@ module Fairy
     end
 
     def input=(job)
-      @input = job
-      backend.input=job.backend
+      super
       
       File.open(@filename, "w") do |io|
-	backend.each_buf do |buf|
-	  buf.each do |l|
-	    io.puts l
-#	    l = nil             # 効果無し
-	  end
-	  # GCの問題[BUG: #135]
-	  buf.clear             # 50/200
-	  buf = nil             # 59/200
+	each do |e|
+	  io.puts e
 	end
       end
     end
+
+#     def input=(job)
+#       @input = job
+#       backend.input=job.backend
+      
+#       File.open(@filename, "w") do |io|
+# 	backend.each_buf do |buf|
+# 	  buf.each do |l|
+# 	    io.puts l
+# #	    l = nil             # 効果無し
+# 	  end
+# 	  # GCの問題[BUG: #135]
+# 	  buf.clear             # 50/200
+# 	  buf = nil             # 59/200
+# 	end
+#       end
+#     end
   end
 end
